--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 body {
     margin: 0;
-    background-color: darkslateblue;
-    color: white;
+    background-color: white;
+    color: black;
     font-family: 'Muli', sans-serif;
     display: flex;
     align-items: center;
@@ -16,8 +16,8 @@ body {
 }
 
 .container {
-    background-color: rgb(22, 22, 114);
-    box-shadow: 7px 7px 10px rgba(0, 0, 0, 0.3);
+    background-color: rgb(207, 206, 201);
+    box-shadow: 7px 7px 10px rgba(223, 174, 125, 0.3);
     padding: 30px;
     width: 40vw;
     height: 70vh;
@@ -33,7 +33,7 @@ h1 {
 }
 
 .output {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(120, 120, 120, 0.3);
     width: 100%;
     height: 40px;
     margin: 20px 0 5px;
@@ -65,7 +65,7 @@ h1 {
 p {
     margin: 0 0 10px;
     font-size: 14px;
-    color: rgb(251, 78, 78);
+    color: rgb(204, 96, 50);
     text-align: justify;
     display: none;
 }
@@ -85,7 +85,7 @@ p {
 }
 
 button {
-    background-color: darkslateblue;
+    background-color: rgb(204, 96, 50);
     border: 0;
     border-radius: 5px;
     color: white;
@@ -95,9 +95,6 @@ button {
     cursor: pointer;
 }
 
-button:hover {
-    font-weight: bolder;
-}
 
 .password-length:focus,
 button:focus {
